--- a/p1/css/main.css
+++ b/p1/css/main.css
@@ -1,8 +1,30 @@
+html {
+  height: 100%;
+}
 body {
-  background-color: #ccf2ff;
-  text-align: center;
+margin: 0;
+height: 100%;
+background-repeat: repeat;
+background-attachment: fixed;
+text-align: center;
+
 }
 
 img {
   max-width: 100%;
+}
+
+#starry {
+color: white;
+background-color:black;
+background-image:
+radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
+radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 30px),
+radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 40px),
+radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
+background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
+background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
+
+font-size: 2em;
+font-family: "Courier New", Courier, monospace;
 }
