--- a/p1/css/main.css
+++ b/p1/css/main.css
@@ -7,7 +7,9 @@ height: 100%;
 background-repeat: repeat;
 background-attachment: fixed;
 text-align: center;
-
+line-height: 1.4em;
+font-size: 2em;
+font-family: "Courier New", Courier, monospace;
 }
 
 img {
@@ -25,6 +27,46 @@ radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px
 background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
 background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
 
-font-size: 2em;
-font-family: "Courier New", Courier, monospace;
 }
+
+#starry a:link {
+  color: white;
+}
+
+#starry a:visited {
+  color: white;
+}
+
+#starry a:hover {
+  color: white;
+  font-style: italic;
+  text-decoration: none;
+}
+
+/* COR PAGE 1 */
+.top1, .bottom1 {
+  float: left;
+  width: 50%;
+}
+
+.bottom1 p {
+  margin-top: 30%;
+}
+
+/* FOR PAGE 2 */
+.top2, .bottom2 {
+  margin-top: 50px;
+  height: 20%;
+}
+
+/* For Page 3 */
+/* For Page 4 */
+
+/* For Page 5*/
+
+/* For Page 6*/
+
+/* For Page 7 */
+
+
+/* For Page 8*/
