--- a/e11/1/main.css
+++ b/e11/1/main.css
@@ -20,16 +20,30 @@ body {
   padding: 20px;
 }
 .leftBarBlock {
-  margin-top: 200px;
+  margin-top: 350px;
   width: 100%;
-  padding-left: 30%;
+  padding-left: 20%;
 
 }
 
 h1 {
-  transform: rotate(-90deg);
+
   color: #C0B283;
-  font-size: 3em;
+  font-size: 4em;
+  font-weight: lighter;
+  letter-spacing: 5px;
+  transform: scale(1, 1.5);
+  -webkit-transform:rotate(-90deg) scale(1, 1.5) ;
+
+  transform: ;
+}
+
+h2 {
+    font-weight: lighter;
+}
+
+h3 {
+  margin: 0 0 0 0;
 }
 
 .lightColorBar {
@@ -43,8 +57,25 @@ h1 {
 .darkColorBar {
   margin-top: 10px;
   background-color:	#373737;
-  width: 90%;
+  width: 93%;
   height: 13px;
+
+}
+
+.beigeBar {
+  margin-top: 10px;
+  background-color:	#DCD0C0;
+  padding: 5px 5px 5px 5px;
+  width: calc(93% - 10px);
+
+}
+
+.beigeBarShort {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color:	#DCD0C0;
+  padding: 5px 5px 5px 5px;
+  width: 100px;
 
 }
 
@@ -53,4 +84,10 @@ h1 {
   color: #C0B283;
   padding: 1px 5px 1px 5px;
   width: 230px;
+
+}
+
+.textblock {
+  padding: 5px 5px 5px 5px;
+  width: 93%;
 }
