--- a/e12/4/main.css
+++ b/e12/4/main.css
@@ -1,114 +1,56 @@
 body {
   position: relative;
-  background-color: 	#CAFAFE;
+  background-color: 	#242424;
+  width: 1440px;
+  color:	white;
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 0 0;
+  padding: 50px 50px 50px 50px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.leftBar {
-  background-color: #373737;
-  float: left;
-  display: inline-block;
-  width: 150px;
-
-
-  height: 100vh;
+body h1, body h2 {
+    margin: 0 0 0 0;
 }
-.rightBlock {
-  float: left;
-  display: inline-block;
-  width: calc(100% - 190px);
-  padding: 20px;
-}
-.leftBarBlock {
-  margin-top: 350px;
-  width: 100%;
-  padding-left: 20%;
 
+/*reference
+red:ad1313
+green:5cdb95
+bg:242424
+lighterblue: 3500d3*/
+.topbar, .midbar {
+  text-align: left;
+  padding: 10px 0 10px 1100px ;
+  background-color: #ad1313;
+  width: 340px;
+}
+.greenbarL {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 50px 1440px 0 0;
+  border-color: #5cdb95 transparent transparent transparent;
+}
+
+.authorbar {
+  margin: 0 0 0 1000px;
+}
+
+.greenbarR {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 1440px 50px 0;
+  border-color: transparent #5cdb95 transparent transparent;
+}
+
+.textbox {
+  padding: 50px 50px 50px 50px;
 }
 
 h1 {
-
-  color: #C0B283;
-  font-size: 4em;
-  font-weight: lighter;
-  letter-spacing: 5px;
-  transform: scale(1, 1.5);
-  -webkit-transform:rotate(-90deg) scale(1, 1.5) ;
-
-  transform: ;
+  font-size: 48px;
 }
 
 h2 {
-    font-weight: lighter;
-}
-
-h3 {
-  margin: 0 0 0 0;
-}
-
-.lightColorBar {
-  margin-top: 15px;
-  background-color: #DCD0C0;
-  width: 70%;
-  height: 13px;
-
-}
-
-.darkColorBar {
-  margin-top: 10px;
-  background-color:	#373737;
-  width: 93%;
-  height: 13px;
-
-}
-
-.beigeBar {
-  margin-top: 10px;
-  background-color:	#DCD0C0;
-  padding: 5px 5px 5px 5px;
-  width: calc(93% - 10px);
-
-}
-
-.beigeBarShort {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  background-color:	#DCD0C0;
-  padding: 5px 5px 5px 5px;
-  width: 100px;
-
-}
-
-.authorBlock {
-  background-color: 	#373737;
-  color: #C0B283;
-  padding: 1px 5px 1px 5px;
-  width: 230px;
-
-}
-
-.textblock {
-  padding: 5px 5px 5px 5px;
-  width: 93%;
+  font-size: 24px;
 }
