--- a/p3/main.css
+++ b/p3/main.css
@@ -2,4 +2,28 @@ body {
   background-color: #F2F0DB;
   margin: 0 0 0 0;
   color:	white;
+  height: 3000px;
+}
+
+body h1 {
+  margin: 0 0 0 0;
+}
+
+.topbar {
+  margin-top: 0px;
+  position: fixed;
+  float: left;
+  width: 100%;
+  height: 30px;
+  background-color: #063581;
+  z-index: 3;
+}
+
+.background_pic {
+  position: relative;
+  width: 100%;
+  float: left;
+  z-index: 2;
+  margin-top: 30px;
+
 }
