--- a/p3/main.css
+++ b/p3/main.css
@@ -3,9 +3,17 @@ body {
   margin: 0 0 0 0;
   color:	white;
   height: 3000px;
+
 }
 
 body h1 {
+  margin: 30px; 0 0 0;
+  text-align: center;
+  font-size: 5em;
+  font-family: Lucida Bright,Georgia,serif;
+}
+
+body h2 {
   margin: 0 0 0 0;
 }
 
@@ -20,10 +28,49 @@ body h1 {
 }
 
 .background_pic {
-  position: relative;
   width: 100%;
   float: left;
   z-index: 2;
   margin-top: 30px;
+  background-image: url("images/banner.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  height: 960px;
+  opacity: 0.8;
 
+}
+
+#flgimg {
+  width: 400px;
+  margin-left: calc(50% - 200px);
+  margin-top: 30px;
+}
+
+
+.botbar {
+  margin-top: 0px;
+  float: left;
+  width: 100%;
+  height: 400px;
+  background-color: #063581;
+  z-index: 3;
+}
+
+.panelContainer {
+  float: left;
+}
+
+.panel1 {
+  background-color: ##BB7845;
+  margin-left: 50px;
+  margin-top: 50px;
+  width: calc(100% - 100px);
+}
+
+.img1 {
+  object-fit: cover;
+  width: 300px;
+  height: 425px;
 }
