--- a/p3/main.css
+++ b/p3/main.css
@@ -3,14 +3,14 @@ body {
   margin: 0 0 0 0;
   color:	white;
   height: 3000px;
-
+  font-family: Lucida Bright,Georgia,serif;
 }
 
 body h1 {
   margin: 30px; 0 0 0;
   text-align: center;
   font-size: 5em;
-  font-family: Lucida Bright,Georgia,serif;
+
 }
 
 body h2 {
@@ -26,7 +26,6 @@ body h2 {
   background-color: #063581;
   z-index: 3;
 }
-
 .background_pic {
   width: 100%;
   float: left;
@@ -41,13 +40,21 @@ body h2 {
   opacity: 0.8;
 
 }
-
 #flgimg {
   width: 400px;
   margin-left: calc(50% - 200px);
   margin-top: 30px;
 }
 
+
+.bar {
+  margin-top: 30px;
+  float: left;
+  width: 100%;
+  height: 5px;
+  background-color: #063581;
+  z-index: 3;
+}
 
 .botbar {
   margin-top: 0px;
@@ -60,17 +67,53 @@ body h2 {
 
 .panelContainer {
   float: left;
+  height: 2000px;
+  width: 100%;
 }
-
 .panel1 {
-  background-color: ##BB7845;
+  background-color: #BB7845;
   margin-left: 50px;
   margin-top: 50px;
   width: calc(100% - 100px);
+  height: 500px;
+}
+
+.panel2 {
+  background-color: #BB7845;
+  margin-left: 50px;
+  margin-top: 50px;
+  width: calc(100% - 100px);
+  height: 500px;
 }
 
 .img1 {
+  margin: 15px 15px 0 15px;
+  float: left;
   object-fit: cover;
   width: 300px;
-  height: 425px;
+  height: 450px;
+}
+
+.title h2 {
+  text-align: center;
+  margin-top: 15px;
+  font-size: 2.4em;
+}
+
+.text {
+  margin-left: 30px;
+  height: calc(100% - 150px);
+}
+
+a:link {
+  color: white;
+  text-decoration: underline;
+}
+a:visited {
+  color: white;
+  text-decoration: line-through;
+}
+a:hover {
+  color: white;
+  text-decoration: overline;
 }
