--- a/halloween-img/main.css
+++ b/halloween-img/main.css
@@ -37,3 +37,12 @@ transform: rotate(10deg);
 
 
 }
+
+.ghostbody {
+  width: 150px;
+  height: 200px;
+  position: absolute;
+  top: 600px;
+  left: 200px;
+  background-color: white;
+}
