--- a/halloween-img/main.css
+++ b/halloween-img/main.css
@@ -45,4 +45,37 @@ transform: rotate(10deg);
   top: 600px;
   left: 200px;
   background-color: white;
+
+}
+
+.eyel {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  background-color: black;
+  z-index: 3;
+}
+.eyer {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  position: absolute;
+  top: 30px;
+  left: 100px;
+  background-color: black;
+  z-index: 3;
+}
+
+.ghosthead {
+  width: 150px;
+  height: 200px;
+  border-radius: 50%;
+  position: absolute;
+  top: 500px;
+  left: 200px;
+  background-color: white;
+  z-index: 2;
 }
