--- a/p3/main.css
+++ b/p3/main.css
@@ -22,10 +22,55 @@ body h2 {
   position: fixed;
   float: left;
   width: 100%;
-  height: 30px;
+  height: 50px;
   background-color: #063581;
   z-index: 3;
 }
+
+.menudropdown {
+  position: relative;
+  float: right;
+  display: inline-block;
+}
+
+.dropbtn {
+  background-color: #063581;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  height: calc(100% - 16px);
+}
+
+.dropContent {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  width: 300px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropContent a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropContent a:hover {
+  background-color: black;
+}
+.menudropdown:hover .dropContent {
+  display: block;
+}
+.menudropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+
+
+
+
 .background_pic {
   width: 100%;
   float: left;
@@ -74,6 +119,7 @@ body h2 {
   background-color: #BB7845;
   margin-left: 50px;
   margin-top: 50px;
+  padding-bottom: 20px;
   width: calc(100% - 100px);
   height: 500px;
 }
@@ -118,6 +164,8 @@ a:hover {
   text-decoration: overline;
 }
 
+
+
 @media only screen and (max-width: 805px) {
 .panel1{
   height: 100%;
@@ -127,6 +175,21 @@ a:hover {
   width: 200px;
   margin-left: calc(50% - 100px);
   margin-top: 20%;
+}
+
+.background_pic {
+  width: 100%;
+  float: left;
+  z-index: 2;
+  margin-top: 30px;
+  background-image: url("images/banner.jpg");
+  background-size: cover;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  position: relative;
+  height: 900px;
+  opacity: 0.8;
+
 }
 
 .img1 {
