--- a/p3/main.css
+++ b/p3/main.css
@@ -119,7 +119,7 @@ body h2 {
   background-color: #BB7845;
   margin-left: 50px;
   margin-top: 50px;
-  padding-bottom: 20px;
+
   width: calc(100% - 100px);
   height: 500px;
 }
@@ -166,9 +166,15 @@ a:hover {
 
 
 
-@media only screen and (max-width: 805px) {
+
+@media only screen and (max-width: 1200px) {
 .panel1{
   height: 100%;
+  padding-bottom: 20px;
+}
+
+.hide {
+  display: none;
 }
 
 #flgimg {
