--- a/p3/main.css
+++ b/p3/main.css
@@ -167,7 +167,7 @@ a:hover {
 
 
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1300px) {
 .panel1{
   height: 100%;
   padding-bottom: 20px;
@@ -210,4 +210,12 @@ a:hover {
  p a {
    margin-left: 30px;
  }
+}
+
+@media only screen and (max-width: 780px) {
+
+  .hide {
+    display: none;
+  }
+
 }
