--- a/p5/main.css
+++ b/p5/main.css
@@ -12,8 +12,8 @@ body {
 
 button {
   position: absolute;
-  left: random(5) + em;
   margin-top: 20px;
+  margin-left: 20px;
   line-height: 60px;
   font-weight: bold;
   padding: 0 40px;
@@ -22,4 +22,35 @@ button {
 }
 button:hover {
   background: lightsalmon;
+}
+
+.color1 {
+  background: salmon;
+}
+.color2 {
+  background: green;
+}
+.color3 {
+  background: pink;
+}
+.color4 {
+  background: magenta;
+}
+.color5 {
+  background: orange;
+}
+.color6 {
+  background: skyblue;
+}
+.color7 {
+  background: violet;
+}
+.color8 {
+  background: grey;
+}
+.color9 {
+  background: slategray;
+}
+.color10 {
+  background: lightgreen;
 }
