--- a/p5/main.css
+++ b/p5/main.css
@@ -12,13 +12,12 @@ body {
 
 button {
   position: absolute;
-  margin-top: 20px;
-  margin-left: 20px;
   line-height: 60px;
   font-weight: bold;
   padding: 0 40px;
   background: salmon;
   border: none;
+  border-radius: 10px;
 }
 button:hover {
   background: lightsalmon;
@@ -53,4 +52,9 @@ button:hover {
 }
 .color10 {
   background: lightgreen;
+}
+
+.begin {
+  margin-left: 45vw;
+  margin-top: 45vh;
 }
